--- a/mysite/polls/templates/home.html
+++ b/mysite/polls/templates/home.html
@@ -20,7 +20,7 @@ body {display:table;}
     	<h2><img src="{{STATIC_URL}}polls/admin-logo.png" alt=""/></h2>
         <div class="containerpaneldiv">
 		{% for question in questions %}
-				Welcome to VORG....
+				Welcome {{ question }}....<div style="float:right;"><a href="logout/">Logout</a></div>
 				</div>
 			{% empty %}
 				<div class="containerpaneldiv">
@@ -38,8 +38,8 @@ body {display:table;}
 					
 					<div class="loginhgtdiv">
 						<div class="rembmebrrpanl">
-							<input type="checkbox" />
-							<span class="remberspan">Remember Password</span>
+							<input type="checkbox" name="remember" id="remember"  checked="true"/>
+							<span class="remberspan">Remember Me</span>
 						</div>
 						<input type="submit" value="login" name="submit" />
 						<div class="clear"></div>
