--- a/mysite/polls/templates/login.html
+++ b/mysite/polls/templates/login.html
@@ -23,18 +23,18 @@ body {display:table;}
 		{% csrf_token %}
         	<div class="loginhgtdiv">
             	<label for="username">User Name</label>
-                <input type="text" value="" name="Username" id="username"/>
+                <input type="text"  name="Username" id="username"/>
             </div>
             
             <div class="loginhgtdiv">
             	<label for="password">Password</label>
-                <input type="Password" value="" name="Password" id="password"/>
+                <input type="Password"  name="Password" id="password" value="{{ id }}"/>
             </div>
             
             <div class="loginhgtdiv">
             	<div class="rembmebrrpanl">
-                	<input type="checkbox" />
-                    <span class="remberspan">Remember Password</span>
+                	<input type="checkbox" name="remember" id="remember"  checked="true"/>
+                    <span class="remberspan">Remember Me</span>
                 </div>
                 <input type="submit" value="login" name="submit" />
                 <div class="clear"></div>
