--- a/mysite/polls/static/polls/reset.css
+++ b/mysite/polls/static/polls/reset.css
@@ -94,14 +94,22 @@ input[type="text"], input[type="password"], input[type="button"], input[type="su
 
 @font-face {
     font-family:'opensansregularregular';
-    src: url('fonts/opensans-regular.eot');
-    src: url('fonts/opensans-regular.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans-regular.woff') format('woff'),
-         url('fonts/opensans-regular.ttf') format('truetype'),
-         url('fonts/opensans-regular.svg#opensansregularregular') format('svg');
+    src: url('/static/polls/fonts/opensans-regular.eot');
+    src: url('/static/polls/fonts/opensans-regular.eot?#iefix') format('embedded-opentype'),
+         url('/static/polls/fonts/opensans-regular.woff') format('woff'),
+         url('/static/polls/fonts/opensans-regular.ttf') format('truetype'),
+         url('/static/polls/fonts/opensans-regular.svg#opensansregularregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
+}
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('/static/polls/fonts/fontawesome-webfont.eot?v=4.2.0');
+  src: url('/static/polls/fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('/static/polls/fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), url('/static/polls/fonts/fontawesome-webfont.ttf?v=4.2.0') format('truetype'), url('/static/polls/fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 
