--- a/mysite/polls/templates/change_password.html
+++ b/mysite/polls/templates/change_password.html
@@ -6,9 +6,16 @@
 <link href="{{STATIC_URL}}polls/screen.css" rel="stylesheet" type="text/css" />
 <script src="{{STATIC_URL}}polls/jquery.min.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}polls/html5.js" type="text/javascript"></script>
+<script src="{{STATIC_URL}}polls/jquery.bvalidator.js" type="text/javascript"></script>
+<link href="{{STATIC_URL}}polls/bvalidator.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 body {display:table;}
 </style>
+<script type="text/javascript"> 
+    $(document).ready(function () {
+        $('#cpform').bValidator();
+    });
+</script>
 </head>
 
 <body>
@@ -19,31 +26,27 @@ body {display:table;}
     <section class="adminloginpanel">
     	<h2><img src="{{STATIC_URL}}polls/admin-logo.png" alt=""/></h2>
         <div class="containerpaneldiv">
-		<form action="/home/auth/" method="post" accept-charset="utf-8">
+		RESET Password
+		<br/><br/>
+		To reset your password,enter your new password in the fields below
+		<br/><br/>
+		<form action="/home/confirm_password/{{id}}/" method="post" accept-charset="utf-8" name="cpform" id="cpform">
 		{% csrf_token %}
         	<div class="loginhgtdiv">
-            	<label for="username">User Name</label>
-                <input type="text"  name="Username" id="username"/>
-            </div>
-            
-            <div class="loginhgtdiv">
             	<label for="password">Password</label>
-                <input type="Password"  name="Password" id="password" value="{{ id }}"/>
+                <input type="password"  name="Password" id="password" data-bvalidator="required"/>
             </div>
-            
+			<div class="loginhgtdiv">
+            	<label for="password1">Confirm Password</label>
+                <input type="password"  name="Password1" id="password1" data-bvalidator="equalto[password],required"/>
+            </div>
             <div class="loginhgtdiv">
-            	<div class="rembmebrrpanl">
-                	<input type="checkbox" name="remember" id="remember"  checked="true"/>
-                    <span class="remberspan">Remember Me</span>
-                </div>
-                <input type="submit" value="login" name="submit" />
+            	<input type="submit" value="Submit" name="submit" />
                 <div class="clear"></div>
             </div>
 		</form>
         </div>
-        <div class="footerdiv">
-        	<a href="/home/forgot/">Fogot your Password?</a>
-        </div>
+        
     </section>
     <!--admin login panel div end here-->
 
@@ -51,3 +54,4 @@ body {display:table;}
 
 </body>
 </html>
+ 
