--- a/mysite/polls/static/polls/style.css
+++ b/mysite/polls/static/polls/style.css
@@ -1,17 +1,82 @@
-body{
-        background-color: #fdfdfd;
-        color:#FF0000;
-        margin: 0;
-        padding: 0;
-        font-size: 14px;
-        line-height: 28px;
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    }
-    div.content{
-        border: 1px solid #fbfbfb;
-        background-color: #fff;
-        max-width: 640px;
-        width: 96%;
-        padding: 2%;
-        margin: 28px  auto;
-    }
+.step1-text{margin:5px 0 5px 0;padding :0px;}
+.step1-text p {font-size :10px; text-align :justify; line-height:1.5em; padding:0px 12px;}
+.close-btn{font-weight: bold; margin: -4px 3px 0 0; position: absolute; top: 4px; float: right; left: 90%; background: #0160a9; height: 33px; width: 32px;}
+.close-btn img {width: 10px;height: 13px;float: left;margin: 10px 0px 0px 13px;}
+.win-main{top:150px; left: 551.5px; display: none;}
+.setup-head{text-align: center; width: auto; background: #0071c8; color: rgb(255, 255, 255); margin-top: 0px; height: 35px; line-height: 29px; font-weight: bold; font-size: 16px; padding-top:3px;}
+.click-text{margin-top: 32px; border: 1px solid #77ba31; height: 112px; width: 300px;}
+.img-first{width: 50px; height: auto; padding: 0px; font-size: 34px; background: none repeat scroll 0% 0% rgb(0, 153, 0); color: rgb(255, 255, 255);}
+.img-first img { width:100% !important; height:auto;}
+.dwn-file{font-weight: bold; font-size: 12px; margin-top: 25px;}
+.cont-btn{margin-left: 206px; width: 92px; margin-top: 1px; height: 32px; background: #0071c8; font-size: 15px; font-weight: bold;color: #FFF; border: none; cursor: pointer; margin-top:13px;}
+.footer_txt  {margin:15px 0px 0px 0px; padding:0px; background-color:#efefef; border-top:solid 1px #CCC;float: left;width: 100%;}
+.footer_txt p {font-size :10px; text-align :left; line-height:1.5em; padding:3px 5px;}
+.footer_txt ul {margin: 0px;padding: 0px 16px;}
+.footer_txt ul li { float: left;list-style: inside;padding: 0px;margin-bottom: 11px;font-size: 10px;width: 50%; }
+.cont-btn1{width: 92px; margin-top: 1px; height: 32px; background: #0071c8; font-size: 15px; font-weight: bold;color: #FFF; border: none; cursor: pointer; margin-top:13px;}
+.file-browse{width:91px;margin-left:111px;}
+.abort-btn{width: 92px; margin-top: 1px; height: 32px; background: #0071c8; font-size: 15px; font-weight: bold;color: #FFF; border: none; cursor: pointer; margin-top:13px;}
+.fail-div{float :right;margin :15px 0px 10px 0px;}
+.retry-btn{width: 92px; margin-top: 1px; height: 32px; background: #0071c8; font-size: 15px; font-weight: bold;color: #FFF; border: none; cursor: pointer; margin-top:13px;}
+#mask {
+		  position:absolute;
+		  left:0;
+		  top:0;
+		  z-index:99998;
+		  background-color: #4D4D4D;
+		  display:none;
+		  
+		}  
+		#boxes .window {
+		  position:absolute;
+		  left:0;
+		  top:0;
+		  width:500px;
+		  height:330px;
+		  display:none;
+		  z-index:99999;
+		  padding:10px;
+		}
+		#boxes #dialog {
+		  width:320px; 
+		  height:auto;
+		  padding:0px;
+		  background-color: #FFFFFF;
+		}
+		#mask1 {
+		  position:absolute;
+		  left:0;
+		  top:0;
+		  z-index:99998;
+		  background-color: #4D4D4D;
+		  display:none;
+		  
+		}  
+		#boxes1 .window1{
+		  position:absolute;
+		  left:0;
+		  top:0;
+		  width:500px;
+		  height:330px;
+		  display:none;
+		  z-index:99999;
+		  padding:10px;
+		  -moz-border-radius: 10px;
+		  -webkit-border-radius: 10px;
+		  border-radius: 10px;
+		  border: 2px solid #333333;
+		  
+		  -moz-box-shadow:4px 4px 30px #130507;
+			-webkit-box-shadow:4px 4px 30px #130507;
+		  box-shadow:4px 4px 30px #130507;
+			-moz-transition:top 800ms;
+			-o-transition:top 800ms;
+			-webkit-transition:top 800ms;
+		  transition:top 800ms;
+		}
+		#boxes1 #dialog1 {
+		  width:320px; 
+		  height:auto;
+		  padding:0px;
+		  background-color: #FFFFFF;
+		}
