--- a/mysite/polls/templates/after-import.html
+++ b/mysite/polls/templates/after-import.html
@@ -5,11 +5,11 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 <title>Welcome to Vorg</title>
 <link href="{{STATIC_URL}}polls/reset.css" rel="stylesheet" type="text/css" />
-<link href="{{STATIC_URL}}polls/style.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}polls/screen.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}polls/responsive-layout.css" rel="stylesheet" type="text/css" />
 <script src="{{STATIC_URL}}polls/jquery.min.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}polls/html5.js" type="text/javascript"></script>
+<link href="{{STATIC_URL}}polls/style.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
@@ -157,7 +157,7 @@
                 
                 </div>
                 <!--top link end here-->
-                
+               
                 <section class="topfityone">
                 	<section class="cotentitlepanl">
                     	<h2>page title here</h2>
@@ -183,6 +183,28 @@
                             </li>
                         </ul>
                         <div class="clear"></div>
+						<div style="" id="datalist" style="display:none;">
+						<table style="border: 1px solid; width: 100%; padding: 4px; line-height: 18px; font-size: 14px; font-weight: normal;" id="datalist">
+						<thead>
+						<th>Username</th>
+						<th>Role</th>
+						<th>Email</th>
+						<th>Report TO</th>
+						</thead>
+						<tbody>
+						{% for d in data%}
+						<tr>
+						<td align="center">{{d.username}}</td>
+						<td align="center">{{d.role}}</td>
+						<td align="center">{{d.email}}</td>
+						<td align="center">{{d.report_to}}</td>
+						</tr>
+						{% endfor %}
+						</tbody>
+						</table>
+						
+						
+						</div>
                     </section>
                 
                 
@@ -195,22 +217,16 @@
     </section>
     </section>
 	<div id="boxes">
-	<div id="dialog" class="window win-main">
+	<div  id="dialog" class="window win-main">
 	<div class="setup-head"> Initial Setup Wizard</div>
 	<div align="right" class="close-btn"><a href="javascript:void()" class="close"><img src="{{STATIC_URL}}polls/images/close_btn.png" width="16" style="border:none; cursor:pointer;" /></a></div>
 	
 	<div align="center" class="step1-text">
-	<p>Configuring Your VisualOrg System is quick and easy and can be completed in the following steps.</p>
 	<div class="click-text">
-		<div class="img-first"><img src="{{STATIC_URL}}polls/images/1.png"></div>
-		<div class="dwn-file">Download the simple spreadsheet by <a  href="/home/spreadsheet_download/"style="color:#0099FF">Cliking Here</a></div>
-		
+		<div class="img-first"><img src="{{STATIC_URL}}polls/images/success.png"></div>
+		<div class="dwn-file">Your VisualORG system has been completed successfully!</div>
+		<div></div>
 	</div>
-	<div><input type="button" name="continue" value="Continue" id="continue" class="cont-btn"/></div>
-	<div class="footer_txt">
-	<p>Configuring Your VisualOrg System is quick and easy and can be completed in the following steps.</p>
-	</div>
-
 	</div>
 	
 	</div>
@@ -219,32 +235,7 @@
 	<div style="width: 2000px; height: 2000px; display: none; opacity: 0.7;" id="mask"></div>
 	</div>
 	
-	<div id="boxes1">
-	<div  id="dialog1" class="window1 win-main">
-	<div class="setup-head"> Initial Setup Wizard</div>
-	<div align="right" class="close-btn"><a href="javascript:void()" class="close"><img src="{{STATIC_URL}}polls/images/close_btn.png" width="16" style="border:none; cursor:pointer;" /></a></div>
 	
-	<div align="center" class="step1-text">
-	<p>Configuring Your VisualOrg System is quick and easy and can be completed in the following steps.</p>
-	<div class="click-text">
-		<div class="img-first"><img src="{{STATIC_URL}}polls/images/2.png"></div>
-		<div class="dwn-file">Upload Your Completed Spreadsheet Below</div>
-		
-	</div>
-	<form action="/home/upload/" method="post" class="form-horizontal"
-                      enctype="multipart/form-data" accept-charset="utf-8"> {% csrf_token %}
-		<input type="file" name="csvData" id="csvData" accept=".csv" class="file-browse" />
-		<input type="submit" name="done" value="Done" id="done" class="cont-btn1"/>
-		</form>
-	</div>
-	<div class="footer_txt">
-	<p>Configuring Your VisualOrg System is quick and easy and can be completed in the following steps.</p>
-	</div>
-	</div>
-	
-	<!-- Mask to cover the whole screen -->
-	<div style="width: 2000px; height: 2000px; display: none; opacity: 0.7;" id="mask1"></div>
-	</div>
     <!--content panel end here-->
 
 </section>
@@ -292,7 +283,13 @@
 			$(id).css('left', winW/2-$(id).width()/2);
 		
 			//transition effect
-			$(id).fadeIn(500); 	
+			$(id).fadeIn(500); 
+			$( id ).fadeOut(8000, function() {
+			$('#mask').hide();
+			$('.window').hide();
+			$("#datalist").show();
+				
+			});
 		
 		//if close button is clicked
 		$('.window .close').click(function (e) {
@@ -300,19 +297,19 @@
 			e.preventDefault();
 			
 			$('#mask').hide();
-			$('#dialog').hide();
+			$('.window').hide();
 		});		
 		
 		//if mask is clicked
 		$('#mask').click(function () {
 			$(this).preventDefault();
 			$(this).hide();
-			$('#dialog').hide();
+			$('.window').hide();
 		});		
 		
 		$("#continue").click(function(){
 		
-			$('#dialog').hide();
+			$('.window').hide();
 		var id = '#dialog1';
 		
 			//Get the screen height and width
@@ -343,14 +340,14 @@
 			e.preventDefault();
 			
 			$('#mask1').hide();
-			$('#dialog1').hide();
+			$('.window1').hide();
 		});		
 		
 		//if mask is clicked
 		$('#mask').click(function () {
 			$(this).preventDefault();
 			$(this).hide();
-			$('#dialog1').hide();
+			$('.window1').hide();
 		});	
 	});
 		$("#done").click(function(){
